# gapi

./: .clang-format  CMakeLists.txt  README.md  main.cpp  main_win32.cpp
framework/: CMakeLists.txt
framework/platform/: platform.cpp  platform.h  platform_win.cpp  platform_win.h  window.cpp  window.h
framework/plugin/: plugin.cpp  plugin.h
plugins/: CMakeLists.txt  plugins.h
third/: CMakeLists.txt
